--- a/home.html
+++ b/home.html
@@ -24,6 +24,7 @@
       align-items: center;
       justify-content: center;
     }
+
     header img {
       height: 70px;
       width: auto;
@@ -61,6 +62,7 @@
       font-size: 16px;
       box-sizing: border-box;
       text-align: right;
+      color: #777;
     }
 
     .input-group .icon {
@@ -76,22 +78,6 @@
       display: flex;
       flex-direction: column;
       gap: 10px;
-    }
-
-    .input-block label {
-      display: block;
-      margin-bottom: 5px;
-      font-weight: bold;
-      color: #333;
-    }
-
-    .input-block input {
-      width: 100%;
-      padding: 10px;
-      font-size: 15px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      box-sizing: border-box;
     }
 
     .popup-box {
@@ -214,13 +200,13 @@
       </div>
 
       <div class="row-flex">
-        <div class="input-block">
-          <label>الوصول</label>
-          <input type="date" />
+        <div class="input-group">
+          <input type="date" id="checkin">
+          <span class="icon">📅</span>
         </div>
-        <div class="input-block">
-          <label>المغادرة</label>
-          <input type="date" />
+        <div class="input-group">
+          <input type="date" id="checkout">
+          <span class="icon">📅</span>
         </div>
       </div>
 
@@ -270,6 +256,11 @@
   <script>
     window.addEventListener('load', () => {
       document.body.classList.add('fade-in');
+
+      // إعداد تاريخ اليوم داخل مربعي الوصول والمغادرة
+      const today = new Date().toISOString().split("T")[0];
+      document.getElementById("checkin").value = today;
+      document.getElementById("checkout").value = today;
     });
 
     let rooms = 1;
