--- a/home.html
+++ b/home.html
@@ -1,181 +1,138 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <title>PayGo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Paygo - حجز الفنادق</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f4f4f4;
+      background: linear-gradient(to bottom, #004e92, #000428); /* خلفية تدرج أزرق مثل الصورة */
+      font-family: 'Cairo', sans-serif;
+      direction: rtl;
+      color: #fff;
       margin: 0;
       padding: 0;
     }
 
-    header {
-      background-color: #222;
-      padding: 15px 0;
-      text-align: center;
+    .navbar {
+      background-color: #000;
+      padding: 10px 20px;
     }
 
-    header img {
-      height: 60px;
+    .navbar-brand img {
+      height: 40px;
     }
 
-    .booking-box {
-      background: white;
+    .search-box {
+      background: #fff;
+      color: #000;
       padding: 20px;
-      max-width: 600px;
-      margin: 20px auto;
-      border-radius: 15px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      border-radius: 12px;
+      max-width: 520px;
+      margin: 30px auto;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
 
-    .input-group {
-      position: relative;
-      margin-bottom: 15px;
+    .form-label {
+      font-size: 13px;
+      color: #444;
+      margin-bottom: 4px;
     }
 
-    .input-group input {
-      width: 100%;
-      padding: 12px 45px 12px 12px;
-      border: 1px solid #ccc;
+    .search-box input,
+    .search-box button {
+      height: 45px;
       border-radius: 8px;
-      font-size: 15px;
-      box-sizing: border-box;
-      text-align: right;
-    }
-
-    .input-group .icon {
-      position: absolute;
-      left: 10px;
-      top: 50%;
-      transform: translateY(-50%);
-      font-size: 18px;
-      color: #aaa;
-    }
-
-    .row {
-      display: flex;
-      gap: 10px;
-      margin-bottom: 15px;
-    }
-
-    .row .input-group {
-      flex: 1;
-      margin-bottom: 0;
-    }
-
-    .room-info {
-      position: relative;
-    }
-
-    .search-btn {
-      width: 100%;
-      padding: 12px;
-      font-size: 18px;
-      background: #007bff;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-
-    .search-btn:hover {
-      background: #0056b3;
     }
 
     .destinations {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
+      margin-top: 50px;
       padding: 20px;
-      gap: 20px;
     }
 
-    .card {
-      background: white;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      width: 280px;
-      overflow: hidden;
+    .destination-card {
+      background: #fff;
+      color: #000;
+      border-radius: 12px;
+      padding: 10px;
       text-align: center;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
     }
 
-    .card img {
+    .destination-card img {
       width: 100%;
-      height: 180px;
+      border-radius: 8px;
+      height: 120px;
       object-fit: cover;
     }
 
-    .card h3 {
-      margin: 10px 0;
-      color: #333;
-    }
-
-    .card p {
-      padding: 0 15px 10px;
-      color: #555;
-    }
-
-    .card button {
-      margin-bottom: 15px;
-      padding: 10px 20px;
-      background-color: #007bff;
-      border: none;
-      color: white;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-
-    .card button:hover {
-      background-color: #0056b3;
+    .destination-card h5 {
+      margin-top: 10px;
     }
   </style>
 </head>
 <body>
 
-<header>
-  <img src="paygs.png" alt="PayGo Logo">
-</header>
+  <!-- الشريط العلوي -->
+  <nav class="navbar">
+    <a class="navbar-brand" href="#">
+      <img src="https://i.imgur.com/eo0zNBO.png" alt="Paygo Logo">
+    </a>
+  </nav>
 
-<div class="booking-box">
-  <div class="input-group">
-    <input type="text" placeholder="إلى أين تريد أن تذهب؟">
-    <span class="icon">🔍</span>
-  </div>
-
-  <div class="row">
-    <div class="input-group">
-      <input type="date" id="checkin">
-      <span class="icon">📅</span>
+  <!-- نموذج البحث -->
+  <div class="search-box">
+    <!-- المدينة -->
+    <div class="mb-3">
+      <input type="text" class="form-control" placeholder="إلى أين تريد أن تذهب؟" />
     </div>
-    <div class="input-group">
-      <input type="date" id="checkout">
-      <span class="icon">📅</span>
+
+    <!-- التواريخ -->
+    <div class="d-flex gap-2 mb-3">
+      <div class="flex-fill">
+        <label class="form-label">الوصول</label>
+        <input type="text" class="form-control" value="الثلاثاء، 2 يوليو" readonly />
+      </div>
+      <div class="flex-fill">
+        <label class="form-label">المغادرة</label>
+        <input type="text" class="form-control" value="الأربعاء، 3 يوليو" readonly />
+      </div>
+    </div>
+
+    <!-- الغرف والضيوف -->
+    <div class="mb-3">
+      <input type="text" class="form-control" value="1 غرفة، 2 بالغون، 0 أطفال" readonly />
+    </div>
+
+    <!-- زر البحث -->
+    <button class="btn btn-primary w-100">ابحث</button>
+  </div>
+
+  <!-- الوجهات -->
+  <div class="container destinations">
+    <div class="row g-3">
+      <div class="col-6 col-md-4">
+        <div class="destination-card">
+          <img src="https://source.unsplash.com/300x200/?dubai" alt="دبي">
+          <h5>دبي</h5>
+        </div>
+      </div>
+      <div class="col-6 col-md-4">
+        <div class="destination-card">
+          <img src="https://source.unsplash.com/300x200/?cairo" alt="القاهرة">
+          <h5>القاهرة</h5>
+        </div>
+      </div>
+      <div class="col-6 col-md-4">
+        <div class="destination-card">
+          <img src="https://source.unsplash.com/300x200/?istanbul" alt="إسطنبول">
+          <h5>إسطنبول</h5>
+        </div>
+      </div>
+      <!-- أضف المزيد حسب الرغبة -->
     </div>
   </div>
-
-  <div class="input-group room-info">
-    <input type="text" readonly value="1 غرفة، 2 بالغون، 0 أطفال">
-    <span class="icon">👤</span>
-  </div>
-
-  <button class="search-btn">ابحث</button>
-</div>
-
-<div class="destinations">
-  <div class="card"><img src="https://source.unsplash.com/300x180/?paris"><h3>باريس</h3><p>عاصمة النور والجمال، تشتهر ببرج إيفل والمتاحف.</p><button onclick="location.href='paris.html'">تفاصيل</button></div>
-  <div class="card"><img src="https://source.unsplash.com/300x180/?dubai"><h3>دبي</h3><p>مدينة المستقبل، ناطحات سحاب وتسوق عالمي.</p><button onclick="location.href='dubai.html'">تفاصيل</button></div>
-  <div class="card"><img src="https://source.unsplash.com/300x180/?tokyo"><h3>طوكيو</h3><p>مدينة حديثة بثقافة يابانية تقليدية مدهشة.</p><button onclick="location.href='tokyo.html'">تفاصيل</button></div>
-  <div class="card"><img src="https://source.unsplash.com/300x180/?rome"><h3>روما</h3><p>تاريخ عريق وآثار لا مثيل لها.</p><button onclick="location.href='rome.html'">تفاصيل</button></div>
-</div>
-
-<script>
-  const today = new Date().toISOString().split("T")[0];
-  document.getElementById("checkin").value = today;
-  document.getElementById("checkout").value = today;
-</script>
 
 </body>
 </html>
