--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
     }
 
     .navbar-brand img {
-      height: 40px;
+      height: 50px;
     }
 
     .search-box {
@@ -78,7 +78,7 @@
   <!-- الشريط العلوي مع الشعار -->
   <nav class="navbar">
     <a class="navbar-brand" href="#">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/PayGo_logo.png/320px-PayGo_logo.png" alt="Paygo Logo">
+      <img src="paygs.png" alt="Paygo Logo">
     </a>
   </nav>
 
