--- a/home.html
+++ b/home.html
@@ -17,11 +17,12 @@
 
     .navbar {
       background-color: #000;
-      padding: 10px 20px;
+      padding: 15px 0;
+      text-align: center;
     }
 
-    .navbar-brand img {
-      height: 50px;
+    .navbar img {
+      height: 60px;
     }
 
     .search-box {
@@ -75,12 +76,10 @@
 </head>
 <body>
 
-  <!-- الشريط العلوي مع الشعار -->
-  <nav class="navbar">
-    <a class="navbar-brand" href="#">
-      <img src="paygs.png" alt="Paygo Logo">
-    </a>
-  </nav>
+  <!-- الشريط العلوي مع الشعار في المنتصف -->
+  <div class="navbar">
+    <img src="paygs.png" alt="Paygo Logo">
+  </div>
 
   <!-- نموذج البحث -->
   <div class="search-box">
