--- a/home.html
+++ b/home.html
@@ -7,18 +7,21 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
   <style>
     body {
-      background: linear-gradient(to bottom, #004e92, #000428);
+      background: #ffffff;
       font-family: 'Cairo', sans-serif;
       direction: rtl;
-      color: #fff;
+      color: #000;
       margin: 0;
       padding: 0;
     }
 
+    /* الشريط العلوي */
     .navbar {
-      background-color: #000;
+      background-color: #ccc;
       padding: 15px 0;
-      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     .navbar img {
@@ -32,7 +35,7 @@
       border-radius: 12px;
       max-width: 520px;
       margin: 30px auto;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
 
     .form-label {
@@ -48,7 +51,7 @@
     }
 
     .destinations {
-      margin-top: 50px;
+      margin-top: 40px;
       padding: 20px;
     }
 
@@ -58,7 +61,7 @@
       border-radius: 12px;
       padding: 10px;
       text-align: center;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
       height: 100%;
     }
 
@@ -76,7 +79,7 @@
 </head>
 <body>
 
-  <!-- الشريط العلوي مع الشعار في المنتصف -->
+  <!-- الشريط العلوي مع شعار في المنتصف -->
   <div class="navbar">
     <img src="paygs.png" alt="Paygo Logo">
   </div>
