--- a/home.html
+++ b/home.html
@@ -4,7 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Paygo - حجز الفنادق</title>
+
+  <!-- دعم أيقونة الشاشة الرئيسية للآيفون -->
+  <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="180x180">
+  <link rel="icon" type="image/png" sizes="32x32" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="apple-touch-icon.png">
+
+  <!-- Bootstrap RTL -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
+
   <style>
     body {
       background: #ffffff;
@@ -75,7 +83,6 @@
       margin-top: 10px;
     }
 
-    /* الشريط السفلي */
     .footer {
       background-color: #444;
       color: #fff;
