--- a/home.html
+++ b/home.html
@@ -14,6 +14,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
 
   <style>
+    html, body {
+      height: 100%;
+    }
+
     body {
       background: #ffffff;
       font-family: 'Cairo', sans-serif;
@@ -21,18 +25,22 @@
       color: #000;
       margin: 0;
       padding: 0;
+      display: flex;
+      flex-direction: column;
     }
 
     .navbar {
-      background-color: #444;
-      padding: 15px 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      background-color: #222;
+      padding: 20px 0;
+      text-align: center;
     }
 
     .navbar img {
-      height: 60px;
+      height: 70px;
+    }
+
+    .main-content {
+      flex: 1;
     }
 
     .search-box {
@@ -84,11 +92,10 @@
     }
 
     .footer {
-      background-color: #444;
+      background-color: #222;
       color: #fff;
       text-align: center;
       padding: 12px;
-      margin-top: 40px;
     }
   </style>
 </head>
@@ -99,58 +106,63 @@
     <img src="paygs.png" alt="Paygo Logo">
   </div>
 
-  <!-- نموذج البحث -->
-  <div class="search-box">
-    <div class="mb-3">
-      <input type="text" class="form-control" placeholder="إلى أين تريد أن تذهب؟" />
-    </div>
+  <!-- المحتوى الرئيسي -->
+  <div class="main-content">
 
-    <div class="d-flex gap-2 mb-3">
-      <div class="flex-fill">
-        <label class="form-label">الوصول</label>
-        <input type="text" class="form-control" value="الثلاثاء، 2 يوليو" readonly />
+    <!-- نموذج البحث -->
+    <div class="search-box">
+      <div class="mb-3">
+        <input type="text" class="form-control" placeholder="إلى أين تريد أن تذهب؟" />
       </div>
-      <div class="flex-fill">
-        <label class="form-label">المغادرة</label>
-        <input type="text" class="form-control" value="الأربعاء، 3 يوليو" readonly />
-      </div>
-    </div>
 
-    <div class="mb-3">
-      <input type="text" class="form-control" value="1 غرفة، 2 بالغون، 0 أطفال" readonly />
-    </div>
-
-    <button class="btn btn-primary w-100">ابحث</button>
-  </div>
-
-  <!-- الوجهات -->
-  <div class="container destinations">
-    <div class="row g-3">
-      <div class="col-6">
-        <div class="destination-card">
-          <img src="https://source.unsplash.com/300x200/?dubai" alt="دبي">
-          <h5>دبي</h5>
+      <div class="d-flex gap-2 mb-3">
+        <div class="flex-fill">
+          <label class="form-label">الوصول</label>
+          <input type="text" class="form-control" value="الثلاثاء، 2 يوليو" readonly />
+        </div>
+        <div class="flex-fill">
+          <label class="form-label">المغادرة</label>
+          <input type="text" class="form-control" value="الأربعاء، 3 يوليو" readonly />
         </div>
       </div>
-      <div class="col-6">
-        <div class="destination-card">
-          <img src="https://source.unsplash.com/300x200/?cairo" alt="القاهرة">
-          <h5>القاهرة</h5>
-        </div>
+
+      <div class="mb-3">
+        <input type="text" class="form-control" value="1 غرفة، 2 بالغون، 0 أطفال" readonly />
       </div>
-      <div class="col-6">
-        <div class="destination-card">
-          <img src="https://source.unsplash.com/300x200/?istanbul" alt="إسطنبول">
-          <h5>إسطنبول</h5>
+
+      <button class="btn btn-primary w-100">ابحث</button>
+    </div>
+
+    <!-- الوجهات -->
+    <div class="container destinations">
+      <div class="row g-3">
+        <div class="col-6">
+          <div class="destination-card">
+            <img src="dubai.png" alt="دبي">
+            <h5>دبي</h5>
+          </div>
         </div>
-      </div>
-      <div class="col-6">
-        <div class="destination-card">
-          <img src="https://source.unsplash.com/300x200/?riyadh" alt="الرياض">
-          <h5>الرياض</h5>
+        <div class="col-6">
+          <div class="destination-card">
+            <img src="qairo.png" alt="القاهرة">
+            <h5>القاهرة</h5>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="destination-card">
+            <img src="istanbul.png" alt="إسطنبول">
+            <h5>إسطنبول</h5>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="destination-card">
+            <img src="thailand.png" alt="تايلاند">
+            <h5>تايلاند</h5>
+          </div>
         </div>
       </div>
     </div>
+
   </div>
 
   <!-- الشريط السفلي -->
