--- a/home.html
+++ b/home.html
@@ -32,7 +32,9 @@
     .navbar {
       background-color: #222;
       padding: 20px 0;
-      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     .navbar img {
