--- a/home.html
+++ b/home.html
@@ -14,9 +14,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
 
   <style>
-    html, body {
-      height: 100%;
-    }
+ html, body {
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+}
 
     body {
       background: #ffffff;
