--- a/home.html
+++ b/home.html
@@ -14,37 +14,36 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
 
   <style>
- html, body {
-  min-height: 100vh;
-  margin: 0;
-  padding: 0;
-}
-
-    body {
-      background: #ffffff;
-      font-family: 'Cairo', sans-serif;
-      direction: rtl;
-      color: #000;
+    html, body {
+      min-height: 100vh;
       margin: 0;
       padding: 0;
-      display: flex;
-      flex-direction: column;
     }
 
+    body {
+      display: flex;
+      flex-direction: column;
+      font-family: 'Cairo', sans-serif;
+      background: #ffffff;
+      direction: rtl;
+      color: #000;
+    }
+
+    .main-content {
+      flex: 1;
+    }
+
+    /* الشريط العلوي */
     .navbar {
       background-color: #222;
-      padding: 20px 0;
+      height: 60px;
       display: flex;
       justify-content: center;
       align-items: center;
     }
 
     .navbar img {
-      height: 70px;
-    }
-
-    .main-content {
-      flex: 1;
+      height: 50px;
     }
 
     .search-box {
@@ -95,6 +94,7 @@
       margin-top: 10px;
     }
 
+    /* الشريط السفلي */
     .footer {
       background-color: #222;
       color: #fff;
