--- a/home.html
+++ b/home.html
@@ -94,6 +94,49 @@
       margin-top: 10px;
     }
 
+    /* سلايدر العروض */
+    .travel-offers {
+      overflow: hidden;
+      position: relative;
+      background-color: #f8f8f8;
+      border-radius: 10px;
+      margin: 20px;
+    }
+
+    .slider-track {
+      display: flex;
+      animation: scrollSlider 25s linear infinite;
+      direction: rtl;
+      gap: 10px;
+      padding: 10px 0;
+    }
+
+    .slide {
+      flex: 0 0 auto;
+      width: 200px;
+      height: 120px;
+      border-radius: 8px;
+      overflow: hidden;
+      background: #eee;
+    }
+
+    .slide img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+      border-radius: 8px;
+    }
+
+    @keyframes scrollSlider {
+      0% {
+        transform: translateX(100%);
+      }
+      100% {
+        transform: translateX(-100%);
+      }
+    }
+
     /* الشريط السفلي */
     .footer {
       background-color: #222;
@@ -164,6 +207,17 @@
             <h5>تايلاند</h5>
           </div>
         </div>
+      </div>
+    </div>
+
+    <!-- سلايدر عروض السفر -->
+    <div class="travel-offers">
+      <div class="slider-track">
+        <div class="slide"><img src="offer1.jpg" alt="عرض 1"></div>
+        <div class="slide"><img src="offer2.jpg" alt="عرض 2"></div>
+        <div class="slide"><img src="offer3.jpg" alt="عرض 3"></div>
+        <div class="slide"><img src="offer4.jpg" alt="عرض 4"></div>
+        <div class="slide"><img src="offer1.jpg" alt="عرض 5"></div>
       </div>
     </div>
 
